--- a/mysite/blog/templates/blog/home.html
+++ b/mysite/blog/templates/blog/home.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends "blog/base.html" %}
+
+
+{% block  %}
     {% for post in posts %}
         <h1>{{ post.title }}</h1>
         <p>By {{post.author }} on {{ post.date_posted }}</p>
         <p>{{ post.content }} </p>
     {% endfor %}
-</body>
-</html>
+{% endblock  %}
