--- a/pickup/templates/home.html
+++ b/pickup/templates/home.html
@@ -5,12 +5,12 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-	Hi {{ user.username }}!
-	<p><a href="{% url 'logout' %}">logout</a></p>
+  Hi {{ user.username }}!
+  <p><a href="{% url 'logout' %}">logout</a></p>
+  <p><a href="{% url 'password_reset' %}">reset password</a></p>
 {% else %}
-	<div class="w3 container w3-auto w3-indigo">
-		<p>You are not logged in</p>
-  		<a href="{% url 'login' %}">login</a>
-  	</div>
+  <p>You are not logged in</p>
+  <a href="{% url 'login' %}">login</a> |
+  <a href="{% url 'signup' %}">signup</a>
 {% endif %}
 {% endblock %}
