--- a/pickup/templates/registration/login.html
+++ b/pickup/templates/registration/login.html
@@ -1,13 +1,15 @@
 <!-- templates/registration/login.html -->
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block title %}Login{% endblock title%}
 
 {% block content %}
 <h2>Login</h2>
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form|crispy }}
   <button type="submit">Login</button>
 </form>
 {% endblock content %}
