--- a/pickup/templates/base.html
+++ b/pickup/templates/base.html
@@ -4,12 +4,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<title>{% block title %}Django Auth Tutorial{% endblock title %}</title>
+	
+	<!-- MAPBOX JS & CSS -->
+	<script src='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
+	<link href='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet'/>
+	
+	<title>{% block title %}{% endblock title %}</title>
 </head>
 <body>
 	<main>
 		{% block content %}
-		{% endblock %}
+		{% endblock content %}
 	</main>
 </body>
 </html>
