--- a/pickup/templates/registration/password_reset_form.html
+++ b/pickup/templates/registration/password_reset_form.html
@@ -6,6 +6,7 @@
 {% block title %}Forgot Your Password?{% endblock %}
 
 {% block content %}
+  <a href="{% url 'maps' %}">Home</a>
   <h1>Forgot your password?</h1>
   <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
 
