--- a/pickup/templates/base.html
+++ b/pickup/templates/base.html
@@ -7,6 +7,8 @@
 
 	<!-- MAPBOX CSS -->
 	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
+	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
+	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
 
 	<title>{% block title %}{% endblock title %}</title>
 </head>
