--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -13,51 +13,14 @@
   mapboxgl.accessToken = 'pk.eyJ1IjoiY29zMzMzIiwiYSI6ImNqdDYzY3A0ZDBkMGc0YXF4azczdXRheWMifQ.3VeYeV_c-231Lab62H2XtQ';
   const map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/cos333/cjt7j4fzg2nnf1flca4a7rwrj'
+    style: 'mapbox://styles/mapbox/streets-v9',
+    center: [151.21, -33.86],
+    zoom: 8,
   });
 
   map.on('load', function () {
     map.addControl(new mapboxgl.NavigationControl());
- 
-    map.addLayer({
-    "id"    : "points",
-    "type"  : "symbol",
-    "source": {
-    "type": "geojson",
-    "data": {
-    "type"    : "FeatureCollection",
-    "features": [{
-    "type"    : "Feature",
-    "geometry": {
-    "type"       : "Point",
-    "coordinates": [-77.03238901390978, 38.913188059745586]
-    },
-    "properties": {
-    "title": "Mapbox DC",
-    "icon" : "monument"
-    }
-    }, {
-    "type"    : "Feature",
-    "geometry": {
-    "type"       : "Point",
-    "coordinates": [-122.414, 37.776]
-    },
-    "properties": {
-    "title": "Mapbox SF",
-    "icon" : "harbor"
-    }
-    }]
-    }
-    },
-    "layout": {
-    "icon-image" : "{icon}-15",
-    "text-field" : "{title}",
-    "text-font"  : ["Open Sans Semibold", "Arial Unicode MS Bold"],
-    "text-offset": [0, 0.6],
-    "text-anchor": "top"
-    }
-    });
-    });
+  });
 
   </script>
 
