--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -10,19 +10,20 @@
   <p><a href="{% url 'password_reset' %}">reset password</a></p>
   <div id='map' style='width: 100%; height: 600px;'></div>
   <script>
-  mapboxgl.accessToken = 'pk.eyJ1IjoiY29zMzMzIiwiYSI6ImNqdDYzY3A0ZDBkMGc0YXF4azczdXRheWMifQ.3VeYeV_c-231Lab62H2XtQ';
-  const map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v9',
-    center: [151.21, -33.86],
-    zoom: 8,
+    mapboxgl.accessToken = 'pk.eyJ1IjoiY29zMzMzIiwiYSI6ImNqdDYzY3A0ZDBkMGc0YXF4azczdXRheWMifQ.3VeYeV_c-231Lab62H2XtQ';
+    const map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/mapbox/streets-v9',
+      center: [151.21, -33.86],
+      zoom: 8,
   });
-
   map.on('load', function () {
     map.addControl(new mapboxgl.NavigationControl());
   });
-
   </script>
+
+  {% load static %}
+  <script src="{% static 'js/load.js' %}" type="text/javascript" ></script>
 
 <!-- LANDING PAGE -->
 {% else %}
