--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -9,7 +9,7 @@
   <p><a href="{% url 'logout' %}">logout</a></p>
   <p><a href="{% url 'password_reset' %}">reset password</a></p>
   <div id='map' style='width: 100%; height: 600px;'></div>
-  <script>
+  <!-- <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiY29zMzMzIiwiYSI6ImNqdDYzY3A0ZDBkMGc0YXF4azczdXRheWMifQ.3VeYeV_c-231Lab62H2XtQ';
     const map = new mapboxgl.Map({
       container: 'map',
@@ -20,7 +20,7 @@
   map.on('load', function () {
     map.addControl(new mapboxgl.NavigationControl());
   });
-  </script>
+  </script> -->
 
   {% load static %}
   <script src="{% static 'js/load.js' %}" type="text/javascript" ></script>
