--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -8,6 +8,7 @@
   Hi {{ user.username }}!
   <p> loop through models</p>
 
+  <p><a href="{% url 'testing' %}">testing</a></p>
   <p><a href="{% url 'logout' %}">logout</a></p>
   <p><a href="{% url 'password_reset' %}">reset password</a></p>
   <div id='map' style='width: 100%; height: 600px;'></div>
