--- a/pickup/maps/templates/testing.html
+++ b/pickup/maps/templates/testing.html
@@ -10,7 +10,9 @@
 
 <form method="post">
     {% csrf_token %}
-    {{ form|crispy }}
+    {{ event_form|crispy }}
+
+
     <button type="Add Event">Add Event</button>
 </form>
 
