making sure everything works

--- a/pickup/maps/templates/testing.html
+++ b/pickup/maps/templates/testing.html
@@ -16,9 +16,10 @@
     {{ event_form|crispy }}
     <button type="Add Event">Add Event</button>
 </form>
-{% elif all_events %}
-    {% for event in all_events%}
-    <h3> Event: {{event.event_name}}</h1>
+{% elif all_debug_events %}
+    <h1>Debug Events:</h1>
+    {% for event in all_debug_events%}
+    <h3> ({{forloop.counter}})  {{event.event_name}}</h1>
 
         {% if event.user != '-1'%} <li> Created By: {{event.user}} </li> {% endif %}
         {% if event.event_descr != '-1'%} <li> Description: {{event.event_descr}} </li> {% endif %}
@@ -26,8 +27,17 @@
 
     <br>
     {% endfor %}
+{% endif %}
 
-
+{% if all_events %}
+    <h1>Real Events:</h1>
+    {% for event in all_events%}
+    <h3> ({{forloop.counter}}) {{event.event_name}}</h1>
+        {% if event.user != '-1'%} <li> Created By: {{event.user}} </li> {% endif %}
+        {% if event.event_descr != '-1'%} <li> Description: {{event.event_descr}} </li> {% endif %}
+        {% if event.location != '-1'%} <li> Location: {{event.location}} </li> {% endif %}
+    <br>
+    {% endfor %}
 {% endif %}
 
 
