--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -4,23 +4,36 @@
 {% block title %}Pickup{% endblock title %}
 
 {% block content %}
-{% if user.is_authenticated %}
-Hi {{ user.username }}!
-<p> loop through models</p>
+    {% if user.is_authenticated %}
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-3 px-1 bg-dark">
+                    <div class="py-2 sticky-top flex-grow-1">
+                        <div class="nav flex-sm-column">
+                            <!-- This is where you add pages to the sidebar menu -->
+                            <a href="{% url 'testing' %}">Testing</a>
+                            <a href="{% url 'logout' %}">Logout</a>
+                            <a href="{% url 'password_reset' %}">Reset Password</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col" id="main">
+                    <!-- This is where you put the main content associated with the mapbox interface -->
+                     Hi {{ user.username }}!
+                    <p> loop through models</p>
+                    <div id='map' style='width: 80%; height: 600px;'></div>
+                    {% load static %}
+                    <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
+                </div>
+            </div>
+        </div>
 
-<p><a href="{% url 'testing' %}">testing</a></p>
-<p><a href="{% url 'logout' %}">logout</a></p>
-<p><a href="{% url 'password_reset' %}">reset password</a></p>
-<div id='map' style='width: 100%; height: 600px;'></div>
 
-{% load static %}
-<script src="{% static 'js/load.js' %}" type="text/javascript"></script>
-
-<!-- LANDING PAGE -->
-{% else %}
-<p>You are not logged in</p>
-<a href="{% url 'login' %}">login</a> |
-<a href="{% url 'signup' %}">signup</a>
-{% endif %}
+        <!-- LANDING PAGE -->
+    {% else %}
+        <p>You are not logged in</p>
+        <a href="{% url 'login' %}">login</a> |
+        <a href="{% url 'signup' %}">signup</a>
+    {% endif %}
 
 {% endblock content %}
