added routing for map_def.html

--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -12,6 +12,7 @@
                         <div class="nav flex-sm-column">
                             <!-- This is where you add pages to the sidebar menu -->
                             <a href="{% url 'testing' %}">Testing</a>
+                            <a href="{% url 'map_def' %}">map_def</a>
                             <a href="{% url 'logout' %}">Logout</a>
                             <a href="{% url 'password_reset' %}">Reset Password</a>
                         </div>
