--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -6,25 +6,29 @@
 {% block content %}
     {% if user.is_authenticated %}
 
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
-    <!-- SIDEBAR -->
-    <div class='sidebar'>
-        <div class='heading'>
-            <h1>Upcoming Events</h1>
-            <a href="{% url 'testing' %}" class="nav">Testing</a>
-            <a href="{% url 'map_def' %}" class="nav">map_def</a>
-            <a href="{% url 'logout' %}" class="nav">Logout</a>
-            <a href="{% url 'password_reset' %}" class="nav">Reset Password</a>            
+        <!-- SIDEBAR -->
+        <div class='sidebar'>
+            <div class='heading'>
+                <h1>Upcoming Events</h1>
+                <ul style="list-style-type: none;">
+                    <li>Pickup</li>
+                    <li><a href="{% url 'testing' %}" class="nav">Testing</a></li>
+                    <li><a href="{% url 'map_def' %}" class="nav">map_def</a></li>
+                    <li><a href="{% url 'logout' %}" class="nav">Logout</a></li>
+                    <li><a href="{% url 'password_reset' %}" class="nav">Reset Password</a></li>
+                </ul>
+
+            </div>
+            <div id='listings' class='listings'></div>
         </div>
-        <div id='listings' class='listings'></div>
-    </div>
 
-    <!-- MAP -->
-    <div id='map' class='map'></div>    
-    {% load static %}
-    <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
+        <!-- MAP -->
+        <div id='map' class='map'></div>
+        {% load static %}
+        <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
 
         <!-- LANDING PAGE -->
     {% else %}
