--- a/pickup/templates/standard_page.html
+++ b/pickup/templates/standard_page.html
@@ -1,7 +1,7 @@
-<!-- maps/templates/default.html -->
+<!-- users/templates/profile_page.html -->
 {% extends 'base.html' %}
 
-{% block title %}Pickup{% endblock title %}
+{% block title %}Standard Page{% endblock title %}
 
 {% block content %}
     {% if user.is_authenticated %}
@@ -22,15 +22,14 @@
                     <li><a href="{% url 'password_reset' %}" class="nav">Reset Password</a></li>
                     <li><a href="{% url 'profile_page' %}" class = "nav"> Profile Page </a></li>
                 </ul>
-
             </div>
-            <div id='listings' class='listings'></div>
         </div>
 
-        <!-- MAP -->
-        <div id='map' class='map'></div>
-        {% load static %}
-        <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
+        <!-- Page Information -->
+        <div id='page' class='nav'>
+            {% block page %} {% endblock %}
+        </div>
+
 
         <!-- LANDING PAGE -->
     {% else %}
@@ -40,5 +39,3 @@
     {% endif %}
 
 {% endblock content %}
-        
-            
