--- a/pickup/templates/base.html
+++ b/pickup/templates/base.html
@@ -16,5 +16,8 @@
 		{% block content %}
 		{% endblock content %}
 	</main>
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+	{% block js %}
+	{% endblock js %}
 </body>
 </html>
