created dymanical username checking

--- a/pickup/templates/signup.html
+++ b/pickup/templates/signup.html
@@ -18,14 +18,14 @@
       var username = $(this).val();
 
       $.ajax({
-        url: '/ajax/validate_username/',
+        url: '{% url "validate_username" %}',
         data: {
           'username': username
         },
         dataType: 'json',
         success: function (data) {
           if (data.is_taken) {
-            alert("A user with this username already exists.");
+            document.getElementById("hint_id_username").innerHTML = "That username is already taken!";
           }
         }
       });
