adding jquery to get events from db

--- a/pickup/templates/base.html
+++ b/pickup/templates/base.html
@@ -16,7 +16,11 @@
 		{% block content %}
 		{% endblock content %}
 	</main>
+
+	<!-- So we can use JQuery in any page -->
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+
+	<!-- For custom JS -->
 	{% block js %}
 	{% endblock js %}
 </body>
