using jquery in load.js to create draggable marker

--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -21,6 +21,7 @@
                     <li><a href="{% url 'logout' %}" class="nav">Logout</a></li>
                     <li><a href="{% url 'password_reset' %}" class="nav">Reset Password</a></li>
                     <li><a href="{% url 'profile_page' %}" class = "nav"> Profile Page </a></li>
+                    <li><a href="#" class="nav" id="add_event">Add an event</a></li>
                 </ul>
 
             </div>
@@ -29,9 +30,7 @@
 
         <!-- MAP -->
         <div id='map' class='map'></div>
-        {% load static %}
-        <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
-
+        
         <!-- LANDING PAGE -->
     {% else %}
         <p>You are not logged in</p>
@@ -40,5 +39,11 @@
     {% endif %}
 
 {% endblock content %}
+
+{% block js %}
+    {% load static %}
+    <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
+{% endblock js %}
+
         
             
