added marker functionality. Still have to correct where the confirmation message is occuring.

--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -31,6 +31,11 @@
         <!-- MAP -->
         <div id='map' class='map'></div>
         
+        <!-- POPUP WHEN ADDING EVENT -->
+        <pre id='add_event' class='add_event'></pre>
+
+        
+        
         <!-- LANDING PAGE -->
     {% else %}
         <p>You are not logged in</p>
