finished event creation and saving of coordinates

--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -21,7 +21,7 @@
                     <li><a href="{% url 'logout' %}" class="nav">Logout</a></li>
                     <li><a href="{% url 'password_reset' %}" class="nav">Reset Password</a></li>
                     <li><a href="{% url 'profile_page' %}" class = "nav"> Profile Page </a></li>
-                    <li><a href="#" class="nav" id="add_event">Add an event</a></li>
+                    <li><a href="#" class="nav" id="add_anchor">Add an event</a></li>
                 </ul>
 
             </div>
