--- a/pickup/maps/static/css/main.css
+++ b/pickup/maps/static/css/main.css
@@ -2,8 +2,8 @@
     background: rgba(0,0,0,0.5);
     color: #fff;
     position: absolute;
-    bottom: 40px;
-    left: 10px;
+    bottom: 10%;
+    left: 30%;
     padding:5px 10px;
     margin: 0;
     font-size: 11px;
