--- a/pickup/maps/templates/testing.html
+++ b/pickup/maps/templates/testing.html
@@ -47,3 +47,8 @@
     </div>
 
 {% endblock content %}
+
+{% block js %}
+    {% load static %}
+    <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
+{% endblock js %}
