--- a/pickup/templates/profile_page.html
+++ b/pickup/templates/profile_page.html
@@ -1,11 +1,11 @@
 <!-- users/templates/profile_page.html -->
-{% extends 'standard_page.html' %}
+{% extends 'default.html' %}
 
 {% load crispy_forms_tags %}
 
 {% block title %}Profile Page{% endblock title %}
 
-{% block page %}
+{% block content %}
     {% load static %}
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
@@ -28,4 +28,4 @@
 
 
 
-{% endblock page %}
+{% endblock content %}
