--- a/pickup/templates/profile_page.html
+++ b/pickup/templates/profile_page.html
@@ -1,5 +1,5 @@
 <!-- users/templates/profile_page.html -->
-{% extends 'default.html' %}
+{% extends 'standard_page.html' %}
 
 {% load crispy_forms_tags %}
 
