Properly add the standard page to the testing, profile, and friends page. Create css rules for body content. Move templates to proper location. Move the java script reference to the static pull location within the html file

--- a/pickup/maps/static/css/main.css
+++ b/pickup/maps/static/css/main.css
@@ -65,6 +65,17 @@ a:hover {
     bottom: 0;
 }
 
+.bodycontent {
+    position: absolute;
+    color: #404040;
+    font: 400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
+    left:15%;
+    top: 1%;
+    width: 75%;
+    bottom: 0;
+    -webkit-font-smoothing: antialiased;
+}
+
 .nav {
     display: inline-block;
     text-align: center;
