--- a/pickup/maps/templates/testing.html
+++ b/pickup/maps/templates/testing.html
@@ -1,15 +1,16 @@
 <!-- maps/templates/testing.html -->
-{% extends 'base.html' %}
+{% extends 'standard_page.html' %}
 
 {% load crispy_forms_tags %}
 
 {% block title %}Testing Page{% endblock title %}
 
-{% block content %}
+{% block page %}
     {% load static %}
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
+         <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
 
-    <div id ="testing" class="map" >
+    <div id ="testing" class="bodycontent" >
         <a href="{% url 'maps' %}">Home</a>
         <br>
         <a href="{% url 'list_events' %}"> List all events in database</a>
@@ -46,9 +47,4 @@
         {% endif %}
     </div>
 
-{% endblock content %}
-
-{% block js %}
-    {% load static %}
-    <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
-{% endblock js %}
+{% endblock page %}
