--- a/pickup/templates/profile_edit.html
+++ b/pickup/templates/profile_edit.html
@@ -10,18 +10,14 @@
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     <!-- Profile Information -->
-    <div id='profile' class='map'>
-        <a href="{% url 'maps' %}">Home</a>
-        <br>
+    <div id='profile' >
         <p> This is the Edit Profile Page</p>
 
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">Submit</button>
-
         </form>
-        <br>
     </div>
 
 {% endblock content %}
