--- a/pickup/users/templates/profile_page.html
+++ b/pickup/users/templates/profile_page.html
@@ -1,14 +1,29 @@
 <!-- users/templates/profile_page.html -->
 {% extends 'standard_page.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block title %}Profile Page{% endblock title %}
 
 {% block page %}
     {% load static %}
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
     <!-- Profile Information -->
-    <div id='profile' class='map'>
+    <div id='profile' class="bodycontent" >
+
         <p> This is the Profile Page</p>
+
+        <h1>Profile</h1>
+        <p>Username: {{ user.username }}</p>
+        <p>First Name: {{ user.first_name }}</p>
+        <p>Last Name: {{ user.last_name }}</p>
+        <p>Email: {{ user.email  }}</p>
+
+        <br>
+        <a href="{% url 'profile_edit' %}">Edit Profile</a>
+
     </div>
+
 
 {% endblock page %}
