--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -12,15 +12,16 @@
         <!-- SIDEBAR -->
         <div class='sidebar'>
             <div class='heading'>
-                <h1>Upcoming Events</h1>
-                <ul style="list-style-type: none;">
-                    <li>Pickup</li>
+                <h2> Pickup </h2>
+                <ul style="list-style-type: none; font-size: medium">
+                    <li>COS333 Project Version Alpha </li>
                     <li><a href="{% url 'maps' %}" class="nav">Home Page</a></li>
                     <li><a href="{% url 'testing' %}" class="nav">Testing</a></li>
                     <li><a href="{% url 'map_def' %}" class="nav">map_def</a></li>
                     <li><a href="{% url 'logout' %}" class="nav">Logout</a></li>
                     <li><a href="{% url 'password_reset' %}" class="nav">Reset Password</a></li>
                     <li><a href="{% url 'profile_page' %}" class = "nav"> Profile Page </a></li>
+                    <li><a href="{% url 'friends' %}" class="nav">Friends</a> </li>
                     <li><a href="#" class="nav" id="add_anchor">Add an event</a></li>
                 </ul>
 
