--- a/pickup/templates/standard_page.html
+++ b/pickup/templates/standard_page.html
@@ -12,9 +12,9 @@
         <!-- SIDEBAR -->
         <div class='sidebar'>
             <div class='heading'>
-                <h1>Upcoming Events</h1>
-                <ul style="list-style-type: none;">
-                    <li>Pickup</li>
+                <h2> Pickup </h2>
+                <ul style="list-style-type:none; font-size: medium">
+                    <li>COS333 Project Version Alpha </li>
                     <li><a href="{% url 'maps' %}" class="nav">Home Page</a></li>
                     <li><a href="{% url 'testing' %}" class="nav">Testing</a></li>
                     <li><a href="{% url 'map_def' %}" class="nav">map_def</a></li>
