--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -49,6 +49,7 @@
 {% block js %}
     {% load static %}
     <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
 {% endblock js %}
 
         
