--- a/pickup/maps/static/css/main.css
+++ b/pickup/maps/static/css/main.css
@@ -162,3 +162,20 @@ a:hover {
     clear: both;
     visibility: hidden;
 }
+
+.marker {
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.mapboxgl-popup {
+    max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+}
