Fix the wording on one page

--- a/pickup/users/templates/friends/view_friends.html
+++ b/pickup/users/templates/friends/view_friends.html
@@ -13,7 +13,7 @@
     <!-- Profile Information -->
     <div id='friends' class="bodycontent">
         <a href="{% url 'friends' %}"> Go to Friend Page </a> <br>
-        <p> This is the view friend requests page </p>
+        <p> This is view friends page </p>
 
         {% friends request.user %}
     </div>
