Added Signup and Reset Password Links

--- a/pickup/templates/registration/login.html
+++ b/pickup/templates/registration/login.html
@@ -12,4 +12,7 @@
   {{ form|crispy }}
   <button type="submit">Login</button>
 </form>
+<a href="{% url 'password_reset' %}">Forgot Password?</a><br>
+<a href="{% url 'signup' %}">Make New Account</a>
+
 {% endblock content %}
