--- a/pickup/users/templates/profile_password.html
+++ b/pickup/users/templates/profile_password.html
@@ -13,7 +13,7 @@
     <div id='profile' class='bodycontent'>
         <a href="{% url 'maps' %}">Home</a>
         <br>
-        <p> This is the Edit Profile Page</p>
+        <p> This is the Edit Password Page</p>
 
         <form method="post">
             {% csrf_token %}
@@ -21,6 +21,7 @@
             <button type="submit">Submit</button>
         </form>
         <br>
+        <a href="{% url 'password_reset' %}">Click here if you do not know your current password</a>
     </div>
 
 
