--- a/pickup/templates/registration/login.html
+++ b/pickup/templates/registration/login.html
@@ -6,10 +6,32 @@
 {% block title %}Login{% endblock title%}
 
 {% block content %}
-<h2>Login</h2>
-<form method="post">
+<!-- Header -->
+<div class="navbar navbar-dark bg-dark shadow-sm">
+  <div class="container">
+    <h1 class='container blue' style='text-align:center; color: white;'>Pickup<sup style='font-size:14px'>TM</sup></h1>
+  </div>
+</div>
+
+<!-- Login Form -->
+<form class='form-signin' method="post">
   {% csrf_token %}
-  {{ form|crispy }}
-  <button type="submit">Login</button>
+  <div class="container" style="margin-top: 15%">
+    <div class="row">
+      <div class="col-3"></div>
+      <div class="col-6 text-center">
+        {{ form.username|as_crispy_field }}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-3"></div>
+      <div class="col-6 text-center">
+        {{ form.password|as_crispy_field }}
+      </div>
+    </div>
+    <div class="text-center">
+      <button class='btn btn-primary' type="submit">Login</button>
+    </div>
+  </div>
 </form>
 {% endblock content %}
