changed some formatting, refined login page buttons, removed zip code as user field

--- a/pickup/templates/registration/login.html
+++ b/pickup/templates/registration/login.html
@@ -6,12 +6,7 @@
 {% block title %}Login{% endblock title%}
 
 {% block content %}
-<!-- Header -->
-<div class="navbar navbar-dark bg-dark shadow-sm">
-  <div class="container">
-    <h1 class='container blue' style='text-align:center; color: white;'>Pickup<sup style='font-size:14px'>TM</sup></h1>
-  </div>
-</div>
+{% include "header.html" %}
 
 <!-- Login Form -->
 <form class='form-signin' method="post">
