--- a/pickup/maps/templates/default.html
+++ b/pickup/maps/templates/default.html
@@ -37,9 +37,18 @@
 
     <!-- LANDING PAGE -->
     {% else %}
-        <p>You are not logged in</p>
-        <a href="{% url 'login' %}">login</a> |
-        <a href="{% url 'signup' %}">signup</a>
+        {% include "header.html" %}
+        <div class="container" style="margin-top: 30%;">
+            <div class="card">
+                <div class="card-body" style="text-align: center;">
+                    <p style="font-weight: bold;">You are not logged in.</p>
+                    <a href="{% url 'login' %}" class="btn btn-success">Log in</a>
+        <a href="{% url 'signup' %}" class="btn btn-primary">Sign up</a>
+                </div>
+
+        
+            </div>
+        </div>
     {% endif %}
 
 {% endblock content %}
