--- a/pickup/templates/signup.html
+++ b/pickup/templates/signup.html
@@ -3,12 +3,17 @@
 {% load crispy_forms_tags %}
 {% block title %}Sign Up{% endblock %}
 
+
+
 {% block content %}
-  <h2>Sign up</h2>
+  {% include "header.html" %}
+  <div class="container">
+    <h2 style="text-align: center; margin-top: 5%">Sign Up</h2>
+  </div>
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit">Sign up</button>
+    <button type="submit" class="btn btn-success">Sign up</button>
   </form>
 {% endblock %}
 
