--- a/pickup/templates/standard_page.html
+++ b/pickup/templates/standard_page.html
@@ -33,6 +33,7 @@
 
         <!-- LANDING PAGE -->
     {% else %}
+        {% include "header.html" %}
         <p>You are not logged in</p>
         <a href="{% url 'login' %}">login</a> |
         <a href="{% url 'signup' %}">signup</a>
