--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -1,4 +1,4 @@
-<!-- maps/templates/default.html -->
+<!-- templates/main.html -->
 {% extends 'base.html' %}
 
 {% block title %}Pickup{% endblock title %}
@@ -10,23 +10,23 @@
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
         <!-- SIDEBAR -->
-        <div class='sidebar'>
+        <div class='sidebar' id='sidebar'>
+            {% block sidebar-content %}
             <div class='heading'>
                 <h2> Pickup </h2>
                 <ul style="list-style-type: none; font-size: medium">
                     <li>COS333 Project Version Alpha </li>
                     <li><a href="{% url 'maps' %}" class="nav">Home Page</a></li>
-                    <li><a href="{% url 'testing' %}" class="nav">Testing</a></li>
-                    <li><a href="{% url 'map_def' %}" class="nav">map_def</a></li>
+                    <li><a href="{% url 'add_event' %}" class="nav">Testing</a></li>
                     <li><a href="{% url 'logout' %}" class="nav">Logout</a></li>
                     <li><a href="{% url 'password_reset' %}" class="nav">Reset Password</a></li>
                     <li><a href="{% url 'profile_page' %}" class = "nav"> Profile Page </a></li>
                     <li><a href="{% url 'friends' %}" class="nav">Friends</a> </li>
                     <li><a href="#" class="nav" id="add_anchor">Add an event</a></li>
                 </ul>
-
             </div>
             <div id='listings' class='listings'></div>
+            {% endblock sidebar-content %}
         </div>
 
         <!-- MAP -->
