--- a/pickup/maps/static/css/main.css
+++ b/pickup/maps/static/css/main.css
@@ -52,11 +52,12 @@ a:hover {
 
 .sidebar {
     position: absolute;
+    bottom: 0;
     width: 25%;
     height: 100%;
     top: 0;
     left: 0;
-    overflow: hidden;
+    overflow: scroll;
     border-right: 1px solid rgba(0, 0, 0, 0.25);
 }
 
