--- a/pickup/users/templates/friends/add_friend.html
+++ b/pickup/users/templates/friends/add_friend.html
@@ -1,12 +1,12 @@
 <!-- users/templates/profile_page.html -->
-{% extends 'standard_page.html' %}
+{% extends 'main.html' %}
 
 {% load crispy_forms_tags %}
 {% load friendshiptags %}
 
 {% block title %}Add Friends{% endblock title %}
 
-{% block page %}
+{% block sidebar-content %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
@@ -22,4 +22,4 @@
         </form>
     </div>
 
-{% endblock page %}
+{% endblock sidebar-content %}
