--- a/pickup/users/templates/profile_page.html
+++ b/pickup/users/templates/profile_page.html
@@ -1,11 +1,11 @@
 <!-- users/templates/profile_page.html -->
-{% extends 'standard_page.html' %}
+{% extends 'main.html' %}
 
 {% load crispy_forms_tags %}
 
 {% block title %}Profile Page{% endblock title %}
 
-{% block page %}
+{% block sidebar-content %}
     {% load static %}
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
@@ -23,6 +23,4 @@
         <a href="{% url 'profile_edit' %}">Edit My Profile</a>
         </div>
     </div>
-
-
-{% endblock page %}
+{% endblock sidebar-content %}
