--- a/pickup/users/templates/profile_password.html
+++ b/pickup/users/templates/profile_password.html
@@ -1,13 +1,13 @@
 <!-- users/templates/profile_page.html -->
-{% extends 'standard_page.html' %}
+{% extends 'main.html' %}
 
 {% load crispy_forms_tags %}
 
 {% block title %}Edit Profile Page{% endblock title %}
 
-{% block page %}
+{% block sidebar-content %}
     {% load static %}
-        <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     <!-- Profile Information -->
     <div id='profile' class='bodycontent'>
@@ -23,7 +23,4 @@
         <br>
         <a href="{% url 'password_reset' %}">Click here if you do not know your current password</a>
     </div>
-
-
-
-{% endblock page %}
+{% endblock sidebar-content %}
