--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -57,6 +57,7 @@
     {% load static %}
     <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/geocode.js' %}" type="text/javascript"></script>
 {% endblock js %}
 
         
