--- a/pickup/templates/base.html
+++ b/pickup/templates/base.html
@@ -8,11 +8,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">	
 
-	<!-- MAPBOX CSS -->
+	<!-- MapBox Static -->
 	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
 	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
+	
+	<!-- MapBox Geocoder Static -->
+	<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v3.1.2/mapbox-gl-geocoder.min.js'></script>
+	<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v3.1.2/mapbox-gl-geocoder.css' type='text/css' />
 
-	<!-- So we can use JQuery in any page -->
+	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 	
 	<title>{% block title %}{% endblock title %}</title>
@@ -23,7 +27,6 @@
 		{% endblock content %}
 	</main>
 
-	
 	<!-- For custom JS -->
 	{% block js %}
 	{% endblock js %}
