--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -41,23 +41,37 @@
         <div class="container" style="margin-top: 10%;">
             <div class="card">
                 <div class="card-body" style="text-align: center;">
-                    <p style="font-weight: bold;">You are not logged in.</p>
-                    <a href="{% url 'login' %}" class="btn btn-success">Log in</a>
-                    <a href="{% url 'signup' %}" class="btn btn-primary">Sign up</a>
+                    <p style="font-weight: bold; font-size: 20px;">Create and share events with everyone around you.</p>
+                    <div class="col-md-12 text-center" style="margin-top: 2%">
+                        <a href="{% url 'login' %}" class="btn btn-success">Log in</a>
+                    </div>
+                    <div class="col-md-12 text-center"  style="margin-top: 2%">
+                        <a href="{% url 'signup' %}" class="btn btn-primary">Sign up</a>
+                    </div>
                 </div>
-
-        
             </div>
         </div>
+
+        <div class="container" style="margin-top: 10%;">
+                <div class="card">
+                    <div class="card-body" style="text-align: center;">
+                        <p style="font-weight: bold;">See more about Pickup</p>
+                        <a href="#" class="btn btn-dark">Contact Us</a>
+                        <a href="#" class="btn btn-dark">Meet the Team</a>
+                    </div>
+                </div>
+            </div>
     {% endif %}
 
 {% endblock content %}
 
 {% block js %}
-    {% load static %}
-    <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/geocode.js' %}" type="text/javascript"></script>
+    {% if user.is_authenticated %}
+        {% load static %}   
+        <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/geocode.js' %}" type="text/javascript"></script>
+    {% endif %}
 {% endblock js %}
 
         
