--- a/pickup/templates/signup.html
+++ b/pickup/templates/signup.html
@@ -9,7 +9,15 @@
   {% include "header.html" %}
 
 <!-- Signup Form -->
-  <h3 class="text-center" style="margin-top: 3%">Welcome! Make your new account here</h3>
+  <div class="container" style="margin-top: 2%">
+    <div class="card">
+      <h3 class="text-center card-title" style="margin-top: 3%">Make an account</h3>
+      <div class="text-center card-body" style="margin-top: 2%">
+        <a href="{% url 'login' %}">Already have an account? Click here to login!</a>
+      </div>
+    </div>
+  </div>  
+
   <form class='form-signup' method="post">
     {% csrf_token %}
       <div class="container">
@@ -54,9 +62,6 @@
         </div>
   </div>
   </form>
-    <div class="text-center" style="margin-top: 2%">
-        <a href="{% url 'login' %}">Already have an account? Click here to login!</a>
-    </div>
 {% endblock %}
 
 
