--- a/pickup/templates/header.html
+++ b/pickup/templates/header.html
@@ -1,6 +1,6 @@
 <!-- Header -->
 <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container">
-      <h1 class='container blue' style='font-weight: 800; text-align:center; color: white;'>Pickup<sup style='font-size:14px'>TM</sup></h1>
+      <h1 class='container blue' style='font-weight: 800; text-align:center; color: white;'><a href="{% url 'maps' %}" style="color: rgb(41, 238, 245); text-decoration: none;">Pickup</a><sup style='font-size:14px'>TM</sup></h1>
     </div>
 </div>
