--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -23,9 +23,12 @@
                     <li><a href="{% url 'profile_page' %}" class = "nav"> Profile Page </a></li>
                     <li><a href="{% url 'friends' %}" class="nav">Friends</a> </li>
                     <li><a href="#" class="nav" id="add_anchor">Add an event</a></li>
+                    <li><a href="#" id="test_element">test_ajax</a></li>
                 </ul>
             </div>
-            <div id='listings' class='listings'></div>
+            <div id="fill">
+
+            </div>
             {% endblock sidebar-content %}
         </div>
 
@@ -71,6 +74,7 @@
         <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/geocode.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/test.js' %}" type="text/javascript"></script>
     {% endif %}
 {% endblock js %}
 
