--- a/pickup/templates/base.html
+++ b/pickup/templates/base.html
@@ -18,6 +18,10 @@
 
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+
+	{% load bootstrap4 %}
+	{% bootstrap_css %}
+	{% bootstrap_javascript jquery='full' %}
 	
 	<title>{% block title %}{% endblock title %}</title>
 </head>
