--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -17,13 +17,11 @@
                 <ul style="list-style-type: none; font-size: medium">
                     <li>COS333 Project Version Alpha </li>
                     <li><a href="{% url 'maps' %}" class="nav">Home Page</a></li>
-                    <li><a href="{% url 'add_event' %}" class="nav">Testing</a></li>
                     <li><a href="{% url 'logout' %}" class="nav">Logout</a></li>
                     <li><a href="{% url 'password_reset' %}" class="nav">Reset Password</a></li>
                     <li><a href="{% url 'profile_page' %}" class = "nav"> Profile Page </a></li>
-                    <li><a href="{% url 'friends' %}" class="nav">Friends</a> </li>
-                    <li><a href="#" class="nav" id="add_anchor">Add an event</a></li>
-                    <li><a href="#" id="test_element">test_ajax</a></li>
+                    <li><a href="{% url 'friends' %}" class="nav">Friends</a></li>
+                    <li><a href="#" id="add_event_link" class="nav">Add an event</a></li>
                 </ul>
             </div>
             {% endblock sidebar-content %}
@@ -71,7 +69,6 @@
         <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/geocode.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/test.js' %}" type="text/javascript"></script>
     {% endif %}
 {% endblock js %}
 
