--- a/pickup/maps/static/css/main.css
+++ b/pickup/maps/static/css/main.css
@@ -1,3 +1,8 @@
+.underline {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 #add_event {
     background: rgba(0,0,0,0.5);
     color: #fff;
