--- a/pickup/maps/templates/add-event.html
+++ b/pickup/maps/templates/add-event.html
@@ -5,7 +5,7 @@
          <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
 
     <div id ="testing" class="bodycontent" >
-        <a href="{% url 'maps' %}">Home</a>
+        <a href="#" id="home_sb_link" class="nav">Home</a>
         <br>
         <a href="{% url 'list_events' %}">All Events</a>
 
