--- a/pickup/maps/templates/profile/profile_sb.html
+++ b/pickup/maps/templates/profile/profile_sb.html
@@ -14,7 +14,7 @@
         <p><b>Email:</b> {{ user.email  }}</p>
 
         <br>
-        <a href="#" id="profile_edit_link" class="nav">Edit My Profile</a>
+        <a href="#" id="home_sb_link" class="nav">Home</a>
         </div>
     </div>
 {% endblock sidebar-content %}
