--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -16,12 +16,12 @@
                 <h2> Pickup </h2>
                 <ul style="list-style-type: none; font-size: medium">
                     <li>COS333 Project Version Alpha </li>
-                    <li><a href="{% url 'maps' %}" class="nav">Home Page</a></li>
+                    <li><a href="#" id="home_sb_link" class="nav">Home</a></li>
                     <li><a href="{% url 'logout' %}" class="nav">Logout</a></li>
                     <li><a href="{% url 'password_reset' %}" class="nav">Reset Password</a></li>
-                    <li><a href="{% url 'profile_page' %}" class = "nav"> Profile Page </a></li>
+                    <!-- <li><a href="{% url 'profile_page' %}" class = "nav"> Profile Page </a></li>-->
                     <li><a href="{% url 'friends' %}" class="nav">Friends</a></li>
-                    <li><a href="#" id="profile_sb_link" class="nav">Profile</a></li>
+                    <li><a href="#" id="profile_sb_link" class="nav">View Profile</a></li>
                     <li><a href="#" id="add_event_link" class="nav">Add an event</a></li>
                     <li><p id="add_event_link" class="nav">Add an event</p></li>
                 </ul>
@@ -71,6 +71,7 @@
         <script src="{% static 'js/load.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/profile_sb.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/home_sb.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/add-event-submit.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/geocode.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/hover.js' %}" type="text/javascript"></script>
