--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -12,19 +12,24 @@
         <!-- SIDEBAR -->
         <div class='sidebar' id='sidebar'>
             {% block sidebar-content %}
-            <div class='heading'>
-                <h2> Pickup </h2>
+            <div class='container'>
+                <div class="row">
+                    <div class="col text-center text-light">
+                        <h2>Pickup</h2>
+                    </div>
+                </div>
+            </div>    
+            <div class="container">
                 <ul style="list-style-type: none; font-size: medium">
-                    <li>COS333 Project Version Alpha </li>
-                    <li><a href="#" id="home_sb_link" class="nav">Home</a></li>
-                    <li><a href="{% url 'logout' %}" class="nav">Logout</a></li>
-                    <li><a href="{% url 'password_reset' %}" class="nav">Reset Password</a></li>
-                    <!-- <li><a href="{% url 'profile_page' %}" class = "nav"> Profile Page </a></li>-->
-                    <li><a href="{% url 'friends' %}" class="nav">Friends</a></li>
-                    <li><a href="#" id="profile_sb_link" class="nav">View Profile</a></li>
-                    <li><a href="#" id="add_event_link" class="nav">Add an event</a></li>
-                    <li><p id="add_event_link" class="nav">Add an event</p></li>
+                    <li><p id="home_sb_link" class="nav link">Home</a></li>
+                    <li><a href="{% url 'logout' %}" class="nav link">Logout</a></li>
+                    <li><a href="{% url 'password_reset' %}" class="nav link">Reset Password</a></li>
+                    <li><a href="{% url 'friends' %}" class="nav link">Friends</a></li>
+                    <li><p id="profile_sb_link" class="nav link">View Profile</p></li>
+                    <li><p id="add_event_link" class="nav link">Add an event</p></li>
                 </ul>
+            </div>
+                
             </div>
             {% endblock sidebar-content %}
         </div>
