--- a/pickup/maps/templates/add-event.html
+++ b/pickup/maps/templates/add-event.html
@@ -5,18 +5,17 @@
          <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
 
     <div id ="testing" class="bodycontent" >
-        <a href="#" id="home_sb_link" class="nav">Home</a>
+        <p id="home_sb_link" class="nav link">Home</a>
         <br>
-        <a href="{% url 'list_events' %}">All Events</a>
 
         {%  if event_form %}
             {{ event_form.media }}
             
-            <form id="event_form">
+            <form id="event_form" method="post">
                 {% csrf_token %}
                 {{ event_form|crispy }}
                 {{ event_form.media }}
-                <button type="button" class='btn btn-success' id="add-event-submit">Add Event</button>
+                <button type="submit" class='btn btn-success' id="add-event-submit">Add Event</button>
             </form>
         {% endif %}
 
