changed formatting of popups, testing of event functionality (now working 100%)

--- a/pickup/maps/templates/home_sb.html
+++ b/pickup/maps/templates/home_sb.html
@@ -11,7 +11,7 @@
     </div>    
     <div class="container">
         <ul style="list-style-type: none; font-size: medium">
-            <li><p id="home_sb_link" class="nav link">Home</a></li>
+            <li><p class="nav link home_sb_link">Home</a></li>
             <li><a href="{% url 'logout' %}" class="nav link">Logout</a></li>
             <li><a href="{% url 'password_reset' %}" class="nav link">Reset Password</a></li>
             <li><a href="{% url 'friends' %}" class="nav link">Friends</a></li>
