--- a/pickup/maps/templates/profile/profile_sb.html
+++ b/pickup/maps/templates/profile/profile_sb.html
@@ -14,7 +14,7 @@
         <p><b>Email:</b> {{ user.email  }}</p>
 
         <br>
-        <p id="home_sb_link" class="nav link">Home</p>
+        <p class="nav link home_sb_link">Home</p>
         </div>
     </div>
 {% endblock sidebar-content %}
