--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -21,7 +21,7 @@
             </div>    
             <div class="container">
                 <ul style="list-style-type: none; font-size: medium">
-                    <li><p id="home_sb_link" class="nav link">Home</a></li>
+                    <li><p class="nav link home_sb_link">Home</a></li>
                     <li><a href="{% url 'logout' %}" class="nav link">Logout</a></li>
                     <li><a href="{% url 'password_reset' %}" class="nav link">Reset Password</a></li>
                     <li><a href="{% url 'friends' %}" class="nav link">Friends</a></li>
@@ -77,9 +77,10 @@
         <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/profile_sb.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/home_sb.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/add-event-submit.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/geocode.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/hover.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/rsvp-or-cancel.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/delete-event.js' %}" type="text/javascript"></script>
     {% endif %}
 {% endblock js %}
 
