--- a/pickup/maps/static/css/main.css
+++ b/pickup/maps/static/css/main.css
@@ -102,7 +102,13 @@
     max-width: 200px;
 }
 
+.mapboxgl-popup-close-button {
+    display: none;
+}
+
 .mapboxgl-popup-content {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
+    background-color:rgb(0, 175, 219);
+    color: white;
 }
