--- a/pickup/maps/templates/add-event.html
+++ b/pickup/maps/templates/add-event.html
@@ -5,7 +5,7 @@
          <script src="{% static 'js/add-event.js' %}" type="text/javascript"></script>
 
     <div id ="testing" class="bodycontent" >
-        <p id="home_sb_link" class="nav link">Home</a>
+        <p class="nav link home_sb_link">Home</a>
         <br>
 
         {%  if event_form %}
@@ -16,6 +16,7 @@
                 {{ event_form|crispy }}
                 {{ event_form.media }}
                 <button type="submit" class='btn btn-success' id="add-event-submit">Add Event</button>
+                <button type="button" class='btn btn-danger home_sb_link'>Cancel</button>
             </form>
         {% endif %}
 
