--- a/pickup/templates/signup.html
+++ b/pickup/templates/signup.html
@@ -108,7 +108,7 @@
             console.log("taken!");
           }
           else {
-            document.getElementById("id_hint_email").innerHTML = "Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.";
+            document.getElementById("id_hint_email").innerHTML = "Required.";
           }
         }
       });
