--- a/pickup/templates/registration/login.html
+++ b/pickup/templates/registration/login.html
@@ -12,6 +12,19 @@
 <form class='form-signin' method="post">
   {% csrf_token %}
   <div class="container" style="margin-top: 10%">
+    
+    <!-- Form validation -->
+    <div class="row">
+      <div class = "col-3"></div>
+        <div class = "col-6">
+        <p>
+          {% if form.errors %}
+            <p style = "color:red;" class = "text-center">Username or password incorrect</p>
+          {% endif %}
+        </p>
+      </div>
+    </div>
+    
     <div class="row">
       <div class="col-3"></div>
       <div class="col-6 text-center">
