--- a/pickup/users/templates/friends/add_friend.html
+++ b/pickup/users/templates/friends/add_friend.html
@@ -12,7 +12,7 @@
 
     <!-- Profile Information -->
     <div id='friends' class="bodycontent">
-        <a href="{% url 'friends' %}"> Go to Friend Page </a> <br>
+        <a href="{% url 'friends' %}" class="nav"> Go to Friend Page </a> <br>
         <p> This is the add friends page </p>
 
         <form method="post">
