--- a/pickup/users/templates/friends/friends_page.html
+++ b/pickup/users/templates/friends/friends_page.html
@@ -13,10 +13,10 @@
     <!-- Profile Information -->
     <div id='friends' class="bodycontent">
         <p> This is the friends page </p>
-        <a href="{% url 'add_friend' %}"> Add a friend</a> <br>
-        <a href="{% url 'view_friend_requests' %}"> View friend requests</a> <br>
-        <a href="{% url 'view_friends' %}"> View friends</a> <br>
-        <a href="{% url 'remove_friend' %}"> Remove friend</a>
+        <a href="{% url 'add_friend' %}" class="nav" > Add a friend</a> <br>
+        <a href="{% url 'view_friend_requests' %}" class="nav" > View friend requests</a> <br>
+        <a href="{% url 'view_friends' %}" class="nav" >  View friends</a> <br>
+        <a href="{% url 'remove_friend' %}" class="nav" > Remove friend</a>
 
 
     </div>
